--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "lint:ts": "eslint . --ext .ts",
     "lint:js": "eslint . --ext .js",
     "critical": "node critical.js",
-    "prod": "astro build && pnpm run critical"
+    "prod": "astro build && pnpm run critical",
+    "ncu": "ncu -u --timeout 1500000"
   },
   "devDependencies": {
     "@11ty/eleventy-img": "^1.1.0",
     "@alextim/utils": "^0.1.24",
-    "@astrojs/ts-plugin": "^0.2.0",
+    "@astrojs/ts-plugin": "^0.2.1",
     "@babel/core": "^7.17.5",
     "@types/glob": "^7.2.0",
     "@types/js-yaml": "^4.0.5",
@@ -29,7 +30,7 @@
     "astro-icon": "0.6.0",
     "autoprefixer": "^10.4.2",
     "critical": "^4.0.1",
-    "cssnano": "^5.1.2",
+    "cssnano": "^5.1.3",
     "datauri": "^4.1.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
