--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,17 @@ on:
   - push
   - pull_request
 
+concurrency:
+  # Ensures that only one deploy task per branch/environment will run at a time.
+  group: environment-${{ github.ref }}
+
+  # cancel any in-progress job or run
+  # group: ${{ github.head_ref }}
+
+  # Automatically cancel in-progress actions on the same branch
+  # group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Build application
@@ -16,12 +27,16 @@ jobs:
         uses: actions/setup-node@v2.1.5
         with:
           node-version: 16
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: "🔧 install npm@latest"
         run: npm i -g pnpm@latest
 
       - name: "📦 install dependencies"
         run: pnpm i
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: "🚀 static app"
         run: pnpm build
