--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,8 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: "🚀 static app"
-        run: pnpm build
+        run: |
+          pnpm build
         env:
           IMAGE_FORMATS: "avif,webp,jpg"
 
@@ -50,4 +51,4 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         run: |
           pnpm i -g netlify-cli
-          netlify deploy --prod --dir=public --telemetry-disable
+          netlify deploy --prod --dir=dist --telemetry-disable
