--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
+    X-Robots-Tag = "noindex, nofollow"
     cache-control = "public,max-age=300"
     X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
@@ -20,7 +21,7 @@
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     Accept-CH = "Downlink,RTT,Device-Memory,Save-Data,DPR,Width"
     # Permissions-Policy = "vibrate 'none'; geolocation 'none'; midi 'none'; notifications 'none'; push 'none'; sync-xhr 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; vibrate 'none'; fullscreen 'none'; payment 'none'"
-    Permissions-Policy = "autoplay=(), camera=(), geolocation=(), microphone=(), midi=(), usb=()"
+    Permissions-Policy = "interest-cohort=(), autoplay=(), camera=(), geolocation=(), microphone=(), midi=(), usb=()"
 
 # https://codewithhugo.com/enable-cdn-netlify/
 [[headers]]
@@ -36,11 +37,11 @@
 [[headers]]
   for = "/favicon.ico"
   [headers.values]
-    Cache-Control = "public, max-age=2628000"
+    Cache-Control = "public, max-age=31536000"
 [[headers]]
   for = "/assets/logo.svg"
   [headers.values]
-    Cache-Control = "public, max-age=2628000"
+    Cache-Control = "public, max-age=31536000"
 [[headers]]
   for = "/assets/fonts/*"
   [headers.values]
@@ -48,4 +49,4 @@
 [[headers]]
   for = "/assets/images/*"
   [headers.values]
-    Cache-Control = "public, max-age=604800"
+    Cache-Control = "public, max-age=31536000"
