--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,7 @@
-IMAGE_FORMATS=jpg
+NPM_TOKEN=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
+
+NETLIFY_SITE_ADMIN_URL: https://app.netlify.com/sites/climbing-in-turkey-astro
+NETLIFY_SITE_URL:       https://climbing-in-turkey-astro.netlify.app
+NETLIFY_SITE_ID:        f588c2d5-4f6d-4825-8498-282f406dbf3a
+
+PUBLIC_IMAGE_FORMATS=jpg
