--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,6 @@
 ## force pnpm to hoist
 shamefully-hoist = true
-fetch-timeout=150000
-fetch-retries=5
 @alextim:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:always-auth=true
 
