--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ concurrency:
   # Automatically cancel in-progress actions on the same branch
   # group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
   cancel-in-progress: true
+env:
+  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 jobs:
   build:
@@ -24,24 +26,28 @@ jobs:
         uses: actions/checkout@v2
 
       - name: '🔧 setup node'
-        uses: actions/setup-node@v2.1.5
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: '16'
 
       - name: '🔧 install npm@latest'
         run: npm i -g pnpm@latest
 
       - name: remove current .env
-        run: rm .npmrc
+        run: |
+          # rm .npmrc
 
       - name: create new .env
         run: |
-          echo "shamefully-hoist = true" >> ~/.npmrc
-          echo "@alextim:registry=https://npm.pkg.github.com" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
+          # echo "shamefully-hoist = true" >> ~/.npmrc
+          # echo "@alextim:registry=https://npm.pkg.github.com" >> ~/.npmrc
+          # echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
 
       - name: '📦 install dependencies'
-        run: pnpm i
+        run: pnpm i --ignore-scripts
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: '🚀 static app'
         run: |
