--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,6 @@ concurrency:
   # Automatically cancel in-progress actions on the same branch
   # group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
   cancel-in-progress: true
-env:
-  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 jobs:
   build:
@@ -33,25 +31,14 @@ jobs:
       - name: '🔧 install npm@latest'
         run: npm i -g pnpm@latest
 
-      - name: remove current .env
-        run: |
-          # rm .npmrc
-
-      - name: create new .env
-        run: |
-          # echo "shamefully-hoist = true" >> ~/.npmrc
-          # echo "@alextim:registry=https://npm.pkg.github.com" >> ~/.npmrc
-          # echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
-
       - name: '📦 install dependencies'
-        run: pnpm i --ignore-scripts
+        run: pnpm i
+        # --ignore-scripts
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: '🚀 static app'
-        run: |
-          pnpm build
+        run: pnpm build
         env:
           PUBLIC_IMAGE_FORMATS: 'avif,webp,jpg'
 
