--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,12 +42,12 @@
       "@/layouts/*": ["src/layouts/*"],
       "@/astro-eleventy-img/*": ["src/lib/astro-eleventy-img/index.ts"]
     },
-    // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
-    "types": ["vite/client"],                                      /* Specify type package names to be included without being referenced in a source file. */
-    // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
-    // "resolveJsonModule": true,                        /* Enable importing .json files */
-    // "noResolve": true,                                /* Disallow `import`s, `require`s or `<reference>`s from expanding the number of files TypeScript should add to a project. */
+    // "rootDirs": [],         /* Allow multiple folders to be treated as one when resolving modules. */
+    // "typeRoots": [],        /* Specify multiple folders that act like `./node_modules/@types`. */
+     "types": ["vite/client"], /* Specify type package names to be included without being referenced in a source file. */
+    // "allowUmdGlobalAcces    /* Allow accessing UMD globals from modules. */
+    // "resolveJsonModule      /* Enable importing .json files */
+    // "no                     /* Disallow `import`s, `require`s or `<reference>`s from expanding the number of files TypeScript should add to a project. */
 
     /* JavaScript Support */
     "allowJs": true /* Allow JavaScript files to be a part of your program. Use the `checkJS` option to get errors from these files. */,
