--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@alextim/utils": "^0.1.24",
     "@astrojs/ts-plugin": "^0.2.1",
     "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/eslint": "^8.4.1",
     "@types/glob": "^7.2.0",
     "@types/js-yaml": "^4.0.5",
