--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,8 +44,8 @@
     },
     // "rootDirs": [],         /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],        /* Specify multiple folders that act like `./node_modules/@types`. */
-     "types": ["vite/client"], /* Specify type package names to be included without being referenced in a source file. */
-    // "allowUmdGlobalAcces    /* Allow accessing UMD globals from modules. */
+    // "types": ["vite/client"] /* Specify type package names to be included without being referenced in a source file. */,
+    // "allowUmdGlobalAccess    /* Allow accessing UMD globals from modules. */
     // "resolveJsonModule      /* Enable importing .json files */
     // "no                     /* Disallow `import`s, `require`s or `<reference>`s from expanding the number of files TypeScript should add to a project. */
 
