--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "prettier": "^2.6.1",
     "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-tailwindcss": "^0.1.8",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.3"
+    "tailwindcss": "^3.0.23"
   }
 }
