--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # build output
 dist
+build
+tmp
 
 # dependencies
 node_modules/
@@ -8,6 +10,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log
+.pnpm-debug.log
 
 # environment variables
 .env
@@ -16,7 +20,16 @@ yarn-error.log*
 # macOS-specific files
 .DS_Store
 
+.pnpm-store
+.pnpm-store/
+
 # Local Netlify folder
 .netlify
 
 public/assets/images/
+
+
+
+
+
+
