--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "dev:exp": "astro dev --experimental-static-build",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -20,41 +19,23 @@
     "@11ty/eleventy-img": "^2.0.0",
     "@alextim/utils": "^0.1.24",
     "@astrojs/tailwind": "^0.0.2",
-    "@astrojs/ts-plugin": "^0.2.1",
-    "@babel/core": "^7.17.8",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/eslint": "^8.4.1",
-    "@types/glob": "^7.2.0",
-    "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.23",
-    "@types/prettier": "^2.4.4",
-    "@types/tailwindcss": "^3.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "astro": "^0.25.2",
-    "astro-icon": "0.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "astro": "^0.25.4",
+    "astro-icon": "^0.6.1",
     "autoprefixer": "^10.4.4",
-    "critical": "^4.0.1",
     "cssnano": "^5.1.5",
     "datauri": "^4.1.0",
     "eslint": "^8.12.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.12",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^14.1.0",
     "prettier": "^2.6.1",
     "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-tailwindcss": "^0.1.8",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
   }
 }
