--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,14 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: Solve BigInt in Tailwind
+        run: |
+          cd
+          dir
+          ls
+          cp tw/lib/util/bigSign.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/util
+          cp tw/lib/lib/setupContextUtils.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/lib
+
       - name: '🚀 static app'
         run: pnpm build
         env:
