--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,17 +39,13 @@ jobs:
 
       - name: Solve BigInt in Tailwind
         run: |
-          pwd
-          echo '-----------'
-          ls
-          echo '-----------'
           cp tw/lib/util/bigSign.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/util
           cp tw/lib/lib/setupContextUtils.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/lib
 
       - name: '🚀 static app'
         run: pnpm build
         env:
-          PUBLIC_IMAGE_FORMATS: 'avif,webp,jpg'
+          PUBLIC_IMAGE_FORMATS: avif,webp,jpg
 
       - name: Deploy to Netlify
         if: success()
