--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,16 +28,30 @@ jobs:
         with:
           node-version: '16'
 
-      - name: '🔧 install npm@latest'
-        run: npm i -g pnpm@latest
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
 
-      - name: '📦 install dependencies'
-        run: pnpm i
-        # --ignore-scripts
+      #- name: '🔧 install npm@latest'
+      #  run: npm i -g pnpm@latest
+      - uses: pnpm/action-setup@v2.2.1
+        with:
+          version: latest
+          run_install: true
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Solve BigInt in Tailwind
+      #- name: '📦 install dependencies'
+      #  run: pnpm i
+        # --ignore-scripts
+      #  env:
+      #    NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: "Patch Tailwindcss: *n -> BigInt(*)"
         run: |
           cp tw/lib/util/bigSign.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/util
           cp tw/lib/lib/setupContextUtils.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/lib
