--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "cssnano": "^5.1.5",
     "datauri": "^4.1.0",
     "eslint": "^8.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.12",
