--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prod": "astro build && pnpm run critical",
     "ncu": "ncu -u --timeout 1500000",
     "push": "git add . && git commit -m 'auto' && git push"
-  },
+   },
   "devDependencies": {
     "@11ty/eleventy-img": "^2.0.0",
     "@alextim/utils": "^0.1.24",
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^5.17.0",
     "astro": "^0.25.4",
     "astro-icon": "^0.6.1",
+    "astro-imagetools": "^0.4.1",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.5",
     "datauri": "^4.1.0",
