--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,11 +63,8 @@ jobs:
 
       - name: "Patch: copy images"
         run: |
-          ls ./dist
-          ls ./dist/assets
-          ls ./dist/assets/images
-          cp public/assets/images/*.avif ./dist/assets/images
-          cp public/assets/images/*.webp ./dist/assets/images
+          mkdir dist/assets/images
+          cp public/assets/images/*.* ./dist/assets/images
 
       - name: Deploy to Netlify
         if: success()
