--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,9 +36,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-
 
-      #- name: '🔧 install npm@latest'
+      #- name: '🔧 install pnpm@latest'
       #  run: npm i -g pnpm@latest
-      - uses: pnpm/action-setup@v2.2.1
+      - name: '🔧 setup pnpm'
+        uses: pnpm/action-setup@v2.2.1
         with:
           version: latest
           run_install: true
@@ -47,21 +48,21 @@ jobs:
 
       #- name: '📦 install dependencies'
       #  run: pnpm i
-        # --ignore-scripts
+      # --ignore-scripts
       #  env:
       #    NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: "Patch Tailwindcss: *n -> BigInt(*)"
-        run: |
-          cp tw/lib/util/bigSign.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/util
-          cp tw/lib/lib/setupContextUtils.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/lib
+      #- name: 'Patch Tailwindcss: *n -> BigInt(*)'
+      #  run: |
+      #    cp tw/lib/util/bigSign.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/util
+      #    cp tw/lib/lib/setupContextUtils.js node_modules/.pnpm/tailwindcss@3.0.23_autoprefixer@10.4.4/node_modules/tailwindcss/lib/lib
 
       - name: '🚀 static app'
         run: pnpm build
         env:
           PUBLIC_IMAGE_FORMATS: avif,webp,jpg
 
-      - name: "Patch: copy images"
+      - name: 'Patch: copy images'
         run: |
           mkdir dist/assets/images
           cp public/assets/images/*.* ./dist/assets/images
