--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,5 @@
   "cSpell.words": ["Astro", "tailwindcss", "eleventy", "viber", "vite", "flexbox", "flexbugs", "favicons", "webp", "avif", "pnpm"],
   "cSpell.language": "en,ru",
   "prettier.documentSelectors": ["**/*.astro", "**/*.ts", "**/*.js"],
-  "css.customData": [".vscode/css_custom_data.json"],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "css.customData": [".vscode/css_custom_data.json"]
 }
