--- a/package.json
+++ b/package.json
@@ -14,33 +14,39 @@
     "prod": "astro build && pnpm run critical",
     "ncu": "ncu -u --timeout 1500000",
     "push": "git add . && git commit -m 'auto' && git push"
-   },
+  },
   "devDependencies": {
     "@11ty/eleventy-img": "^2.0.0",
     "@alextim/utils": "^0.1.24",
-    "@astrojs/tailwind": "^0.0.2",
+    "@astrojs/tailwind": "^0.1.2",
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
+    "@types/eslint": "^8.4.1",
     "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "astro": "^0.25.4",
-    "astro-icon": "^0.6.1",
-    "astro-imagetools": "^0.4.1",
+    "@types/prettier": "^2.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "animate.css": "^4.1.1",
+    "astro": "^1.0.0-beta.9",
+    "astro-icon": "^0.7.1",
+    "astro-imagetools": "^0.4.2",
     "autoprefixer": "^10.4.4",
-    "cssnano": "^5.1.5",
+    "cssnano": "^5.1.7",
     "datauri": "^4.1.0",
-    "eslint": "^8.12.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.12",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-tailwindcss": "^0.1.8",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.3"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.3",
+    "wow.js": "^1.2.2"
   }
 }
