--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,10 +62,10 @@ jobs:
         env:
           PUBLIC_IMAGE_FORMATS: avif,webp,jpg
 
-      - name: 'Patch: copy images'
-        run: |
-          mkdir dist/assets/images
-          cp public/assets/images/*.* ./dist/assets/images
+      #- name: 'Patch: copy images'
+      #  run: |
+      #    mkdir dist/assets/images
+      #    cp public/assets/images/*.* ./dist/assets/images
 
       - name: Deploy to Netlify
         if: success()
