--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     # https://report-uri.com/home/generate
-    Content-Security-Policy = "default-src 'self' 'unsafe-inline'; prefetch-src 'self'; connect-src 'self'; img-src 'self' 'unsafe-inline'; media-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; frame-src 'none'; form-action 'none'; object-src 'none'; require-trusted-types-for 'script';"
+    Content-Security-Policy = "default-src 'self' 'unsafe-inline'; prefetch-src 'self'; connect-src 'self'; img-src 'self' 'unsafe-inline' data:; media-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; frame-src 'none'; form-action 'none'; object-src 'none'; require-trusted-types-for 'script';"
     #Content-Security-Policy = "default-src 'self' 'unsafe-inline' *.googletagmanager.com *.google-analytics.com *.cloudfront.net; prefetch-src 'self'; connect-src 'self' google-analytics.com *.google-analytics.com; img-src 'self' 'unsafe-inline' *.google-analytics.com; media-src 'self' *.youtube.com; style-src 'self' 'unsafe-inline' googleapis.com *.googleapis.com cloudfront.net *.cloudfront.net; script-src 'self' 'unsafe-inline' *.google-analytics.com  *.googletagmanager.com *.cloudfront.net; frame-src 'self' https://www.youtube.com/ https://vimeo.com; form-action 'self' https:; object-src 'none'; require-trusted-types-for 'script';"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
