--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
       - name: '🚀 static app'
         run: pnpm build
         env:
-          PUBLIC_IMAGE_FORMATS: avif,webp,jpg
+          PUBLIC_IMAGE_FORMATS: avif,webp
 
       - name: 'Patch: copy images'
         run: |
