--- a/netlify.toml
+++ b/netlify.toml
@@ -46,7 +46,20 @@
   for = "/assets/fonts/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+    
 [[headers]]
   for = "/assets/images/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+[[headers]]
+  for = "/assets/*.webp"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+[[headers]]
+  for = "/assets/*.avif"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+[[headers]]
+  for = "/assets/*.jpeg"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
