--- a/netlify.toml
+++ b/netlify.toml
@@ -46,7 +46,7 @@
   for = "/assets/fonts/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
-    
+
 [[headers]]
   for = "/assets/images/*"
   [headers.values]
@@ -61,5 +61,9 @@
     Cache-Control = "public, max-age=31536000"
 [[headers]]
   for = "/assets/*.jpeg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+[[headers]]
+  for = "/assets/*.jpg"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
