--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/prettier": "^2.6.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "astro": "^1.0.0-beta.12",
     "astro-icon": "^0.7.1",
     "astro-imagetools": "^0.5.3",
@@ -44,7 +44,6 @@
     "prettier-plugin-astro": "^0.0.12",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
-    "wow.js": "^1.2.2"
+    "typescript": "^4.6.3"
   }
 }
