--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "aos": "^3.0.0-beta.6",
     "astro": "^1.0.0-beta.12",
     "astro-icon": "^0.7.1",
-    "astro-imagetools": "^0.5.3",
+    "astro-imagetools": "^0.5.4",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.7",
     "eslint": "^8.13.0",
@@ -38,6 +38,7 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "fast-glob": "^3.2.11",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
