--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,6 +111,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "typings/**/*.ts", "src/**/*.js", "src/config/siteUrl.mjs"],
+  "include": ["src/**/*.ts", "test/**/*.ts", "typings/**/*.ts", "src/**/*.js", "src/config/siteUrl.mjs", "src/lib/siteMap.mjs"],
   "exclude": ["**/dist", "**/node_modules", "**/src/__tests__"]
 }
