--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev --experimental-static-build",
-    "build": "astro build",
-    "build:ex": "astro build --experimental-static-build",
+    "dev": "astro dev",
+    "build": "astro build --experimental-integrations",
     "preview": "astro preview",
     "format": "prettier -w  --plugin-search-dir=. .",
-    "lint": "eslint . --ext .ts,.js",
-    "lint:fix": "eslint . --fix --ext .ts,.js",
+    "format2": "prettier -w  .",
+    "lint": "eslint . --ext .ts,.js,.mjs",
+    "lint:fix": "eslint . --fix --ext .ts,.js,.mjs",
     "critical": "node scripts/generate-critical.js",
     "prod": "astro build && pnpm run critical",
     "ncu": "ncu -u --timeout 1500000",
@@ -18,21 +18,22 @@
   "devDependencies": {
     "@alextim/utils": "^0.1.24",
     "@astrojs/sitemap": "^0.1.0",
-    "@astrojs/tailwind": "^0.2.0",
+    "@astrojs/tailwind": "^0.2.1",
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
     "@types/eslint": "^8.4.1",
-    "@types/node": "^17.0.25",
+    "@types/node": "^17.0.29",
     "@types/prettier": "^2.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "aos": "^3.0.0-beta.6",
-    "astro": "^1.0.0-beta.14",
+    "astro": "^1.0.0-beta.19",
     "astro-icon": "^0.7.1",
-    "astro-imagetools": "^0.5.6",
-    "autoprefixer": "^10.4.4",
+    "astro-imagetools": "^0.5.8",
+    "astro-robots-txt": "^0.1.8",
+    "autoprefixer": "^10.4.5",
     "cssnano": "^5.1.7",
-    "eslint": "^8.13.0",
+    "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
