--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,24 @@
 {
+  "search.exclude": {"**/*.log": true, "**/dist": true, "pnpm-lock.yaml": true},
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.formatOnSaveMode": "file",
-  "tailwindCSS.includeLanguages": {
-    "plaintext": "html"
-  },
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false,
+  "editor.formatOnPaste": false,
+  "editor.formatOnSave": false,
   "editor.quickSuggestions": {
     "strings": true
   },
-  "editor.codeActionsOnSave": {
-    "source.fixAll": true
-  },
+  "editor.codeActionsOnSave": [
+    "source.addMissingImports",
+    "source.fixAll.eslint"
+  ],
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "astro"
+  ],
   "cSpell.words": ["Astro", "tailwindcss", "eleventy", "viber", "vite", "flexbox", "flexbugs", "favicons", "webp", "avif", "pnpm", "imagetools"],
   "cSpell.language": "en,ru",
   "prettier.documentSelectors": ["**/*.astro", "**/*.ts", "**/*.js"],
