--- a/package.json
+++ b/package.json
@@ -15,41 +15,45 @@
     "publish": "changeset publish"
   },
   "devDependencies": {
-    "@alextim/utils": "^0.1.24",
-    "@astrojs/sitemap": "^0.2.2",
-    "@astrojs/tailwind": "^0.2.1",
-    "@babel/core": "^7.18.5",
+    "@astrojs/tailwind": "^0.2.4",
+    "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
-    "@changesets/cli": "^2.23.0",
-    "@types/eslint": "^8.4.3",
-    "@types/node": "^18.0.0",
+    "@changesets/cli": "^2.23.2",
+    "@types/eslint": "^8.4.5",
+    "@types/node": "^18.0.4",
     "@types/prettier": "^2.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "aos": "^3.0.0-beta.6",
-    "astro": "^1.0.0-beta.56",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "astro": "^1.0.0-beta.72",
     "astro-icon": "^0.7.1",
     "astro-imagetools": "0.6.10",
     "astro-robots-txt": "^0.3.6",
+    "astro-webmanifest": "^0.3.5",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.1.0",
+    "eslint-import-resolver-typescript": "^3.2.6",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "fast-glob": "^3.2.11",
-    "js-yaml": "^4.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-tailwindcss": "^3.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.1.1",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.1.4",
+    "prettier-plugin-tailwindcss": "^0.1.12",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@alextim/utils": "^0.1.24",
+    "aos": "^3.0.0-beta.6",
+    "fast-glob": "^3.2.11",
+    "js-yaml": "^4.1.0",
     "photoswipe": "^5.2.8"
   }
 }
