--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
     "publish": "changeset publish"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^0.2.4",
-    "@babel/core": "^7.18.6",
-    "@babel/eslint-parser": "^7.18.2",
-    "@changesets/cli": "^2.23.2",
+    "@astrojs/tailwind": "^0.2.5",
+    "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
+    "@changesets/cli": "^2.24.1",
     "@types/eslint": "^8.4.5",
-    "@types/node": "^18.0.4",
-    "@types/prettier": "^2.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "astro": "^1.0.0-beta.72",
-    "astro-icon": "^0.7.1",
+    "@types/node": "^18.6.1",
+    "@types/prettier": "^2.6.4",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "astro": "^1.0.0-rc.1",
+    "astro-icon": "^0.7.3",
     "astro-imagetools": "0.6.10",
-    "astro-robots-txt": "^0.3.6",
-    "astro-webmanifest": "^0.3.5",
+    "astro-robots-txt": "^0.3.7",
+    "astro-webmanifest": "^0.3.6",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
-    "eslint": "^8.19.0",
+    "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.2.6",
+    "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
@@ -44,8 +44,8 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.1.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
+    "prettier-plugin-astro": "^0.1.2",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   },
@@ -54,6 +54,6 @@
     "aos": "^3.0.0-beta.6",
     "fast-glob": "^3.2.11",
     "js-yaml": "^4.1.0",
-    "photoswipe": "^5.2.8"
+    "photoswipe": "^5.3.0"
   }
 }
